k8s/stackpilot-exchange/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stackpilot-ingress
  namespace: stackpilot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: customer.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-portal
                port:
                  number: 8000

    - host: admin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-portal
                port:
                  number: 8000

    - host: ops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ops-portal
                port:
                  number: 8000
